[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/tf_jungle_tileset.png" type="Texture" id=1]
[ext_resource path="res://Images/select.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Berries.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Berries" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 16, 304, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.583977, 3.21188 )
shape = SubResource( 1 )

[node name="select" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Clickable" type="Area2D" parent="." groups=[
"food",
"selectable",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickable"]
position = Vector2( -0.291992, 1.75193 )
shape = SubResource( 2 )
[connection signal="input_event" from="Clickable" to="." method="_on_Clickable_input_event"]
[connection signal="mouse_entered" from="Clickable" to="." method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="Clickable" to="." method="_on_Clickable_mouse_exited"]
